force-app/main/default/objects/InsurancePolicyCoverage/fields/Asset_Address__c.field-meta.xml
<CustomField>
    <fullName>Asset_Address__c</fullName>
    <formula>InsurancePolicyAsset.Asset_Address__PostalCode__s &amp; &quot; &quot; &amp; 
TEXT(InsurancePolicyAsset.Asset_Address__StateCode__s) &amp; &quot; &quot; &amp; 
InsurancePolicyAsset.Asset_Address__City__s  &amp; &quot; &quot; &amp; 
InsurancePolicyAsset.Asset_Address__Street__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Address</label>
    <type>Text</type>
</CustomField>