force-app/main/default/objects/InsurancePolicyCoverage/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <formula>InsurancePolicyAsset.AssetName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>