force-app/main/default/objects/InsurancePolicyCoverage/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P&amp;I</fullName>
            </value>
            <value>
                <fullName>Cargo</fullName>
            </value>
            <value>
                <fullName>DTH</fullName>
            </value>
            <value>
                <fullName>FDD</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>