force-app/main/default/objects/InsurancePolicyCoverage/fields/Coverage_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Sum_Insured__c</fullName>
    <label>Location Sum Insured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>