force-app/main/default/objects/InsurancePolicyCoverage/fields/CoverageTnC__c.field-meta.xml
<CustomField>
    <fullName>CoverageTnC__c</fullName>
    <label>Coverage T&amp;C</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>