force-app/main/default/objects/InsurancePolicyCoverage/fields/CRSInsuredAmountCNT_fm__c.field-meta.xml
<CustomField>
    <fullName>CRSInsuredAmountCNT_fm__c</fullName>
    <formula>IF ( EGIGroupInsurance_is__c = True  &amp;&amp;  EGIInsuredAmount__c &gt; 0, 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InsuredAmountCNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>