force-app/main/default/objects/InsurancePolicyCoverage/fields/Deductibles__c.field-meta.xml
<CustomField>
    <fullName>Deductibles__c</fullName>
    <label>Deductibles</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>