force-app/main/default/objects/InsurancePolicyCoverage/fields/EGIGroupInsurance_is__c.field-meta.xml
<CustomField>
    <fullName>EGIGroupInsurance_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Insurance</label>
    <type>Checkbox</type>
</CustomField>