force-app/main/default/objects/InsurancePolicyCoverage/fields/EGIGroupName__c.field-meta.xml
<CustomField>
    <fullName>EGIGroupName__c</fullName>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>