force-app/main/default/objects/InsurancePolicyCoverage/fields/EGIInsuranceCoverage__c.field-meta.xml
<CustomField>
    <fullName>EGIInsuranceCoverage__c</fullName>
    <label>Insurance Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>