force-app/main/default/objects/InsurancePolicyCoverage/fields/EGIInsuredAmount__c.field-meta.xml
<CustomField>
    <fullName>EGIInsuredAmount__c</fullName>
    <label>Insured Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>