force-app/main/default/objects/InsurancePolicyCoverage/fields/EGIInsurer_lk__c.field-meta.xml
<CustomField>
    <fullName>EGIInsurer_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policy Coverages</relationshipLabel>
    <relationshipName>InsurancePolicyCoveragesbyEGIInsurer</relationshipName>
    <type>Lookup</type>
</CustomField>