force-app/main/default/objects/InsurancePolicyCoverage/fields/EGIMasterCoverages__c.field-meta.xml
<CustomField>
    <fullName>EGIMasterCoverages__c</fullName>
    <label>Master Coverages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>