force-app/main/default/objects/InsurancePolicyCoverage/fields/EGIMasterPolicy_lk__c.field-meta.xml
<CustomField>
    <fullName>EGIMasterPolicy_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Policy(EGI)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>InsurancePolicy.EGIGroupInsurance_is__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Insurance Policy Coverages</relationshipLabel>
    <relationshipName>InsurancePolicyCoveragesbyEGI</relationshipName>
    <type>Lookup</type>
</CustomField>