force-app/main/default/objects/InsurancePolicyCoverage/fields/Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Limit_Amount__c</fullName>
    <label>Limit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>