force-app/main/default/objects/InsurancePolicyCoverage/fields/Section_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Section_Premium_Amount__c</fullName>
    <label>Section Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>