force-app/main/default/objects/InsurancePolicyCoverage/fields/Section_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Section_Sum_Insured__c</fullName>
    <label>Policy Section S.I.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>